# Autonomous-taxicar

./: main.c  sensormodul.cpp  sensormodulV2.cpp
TCP/: move_data.json  pi_comm  pi_comm.cpp  win_gui.py  win_gui_new.py  win_gui_new2.py  win_gui_offline.py
common/: opcodes.h
kamera/: branching.py  cluster.py  config.py  eval_image.py  find_boundries.py  find_path.py  line_detection.py  path_spacing.py  pi_cam.py.save  picam.py  process_frame.py  requirements.txt  streamer.py  test_cam.py  visualization.py
kommunikationsmodul/: CMakeLists.txt
kommunikationsmodul/include/: CppToPyArrayTx.hpp  bitmask.hpp  cam_offset_rx.hpp  config.hpp  fd.hpp  log.hpp  sensor_reader.hpp  sensor_writer.hpp  shared_state.hpp  styr_reader.hpp  styr_writer.hpp  tcp_session.hpp  uart.hpp
kommunikationsmodul/src/: main.cpp  path_algoritm.cpp  sensor_reader.cpp  sensor_writer.cpp  styr_reader.cpp  styr_writer.cpp  tcp_session.cpp  uart.cpp
sensormodul/: main.cpp  odometry.cpp  odometry.h  uart.cpp  uart.h  ultrasonic.cpp  ultrasonic.h
styrmodul/styrmodul/: main.c  pid.h  servo.c  servo.h  servo_test.c  servo_test.h  styrmodul.componentinfo.xml  styrmodul.cproj
styrmodul/styrmodul/Debug/: Makefile  main.d  makedep.mk  servo.d  styrmodul.elf  styrmodul.hex  styrmodul.lss  styrmodul.map  styrmodul.srec
